# quant-alpha-model

./: .gitignore  README.md  main.py  pyproject.toml
config/: logging_config.yaml
notebooks/: 02_factor-construction.ipynb  03_regime-detection.ipynb
research/: draft_report.md
src/: run_backtest.py
src/backtesting/: engine.py
src/data/: resample_data.py
src/logger/: logging.py
src/strategies/: cross_sectional_mr.py  sample.py
src/visualization/: plots.py
